Modified swagger annotations
