# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/
 definitions:
   history.ReportResponse:
     properties:
@@ -88,6 +87,8 @@ paths:
           schema:
             type: string
       summary: automatically add users to segment
+      tags:
+      - Segments
   /api/create_segment:
     post:
       consumes:
@@ -114,6 +115,8 @@ paths:
           schema:
             type: string
       summary: creates new segment
+      tags:
+      - Segments
   /api/delete_segment:
     delete:
       consumes:
@@ -140,11 +143,14 @@ paths:
           schema:
             type: string
       summary: deletes existing segment
+      tags:
+      - Segments
   /api/get_user_history:
     get:
       consumes:
       - application/json
-      description: receive report on user segments assignments within the given dates
+      description: receive report on user segments assignments and unassignments within
+        the given dates
       parameters:
       - description: The input struct
         in: body
@@ -167,7 +173,9 @@ paths:
           description: something went wrong
           schema:
             type: string
-      summary: receive report on user segments assignments
+      summary: receive report on user segments assignments and unassignments
+      tags:
+      - History
   /api/get_user_segments:
     get:
       consumes:
@@ -196,6 +204,8 @@ paths:
           schema:
             type: string
       summary: receive segments assigned to user
+      tags:
+      - Segments
   /api/update_user_segments:
     post:
       consumes:
@@ -222,4 +232,6 @@ paths:
           schema:
             type: string
       summary: assign and unassign segments from user
+      tags:
+      - Segments
 swagger: "2.0"
